# web-scraper

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: install.bat  install.sh  run_fb2_export.bat  run_fb2_export.sh  run_labeler.bat  run_labeler.sh  run_scraper.bat  run_scraper.sh
story_scraper/: __init__.py  annotations.py  browser_utils.py  config.py  fb2_export.py  labeler.py  scraper.py
